Revert "fixes due to adding inline-block to btn__count to fix safari v9.0.2 on iphone and mac desktop bug that removed click count after clicking btn"
This reverts commit a142bdc154b23186585a078b4edfd7fbd495bd00.

--- a/front-end/css/sass/_base.scss
+++ b/front-end/css/sass/_base.scss
@@ -10,7 +10,7 @@
 
 
 .enp-btns-wrap {
-    padding-top: 1em; // on redirect via slug, this preserves spacing better
+    padding-top: 1em; /* on redirect via slug, this preserves spacing better */
     box-sizing: border-box;
 
     .enp-btns {
@@ -41,7 +41,6 @@
     .enp-btn__count {
         position: relative;
         margin-left: 0.6em;
-        display: inline-block; // fixes bug in safari iOS and desktop v 9.0.2 where number disappears after clicking a button
     }
 
     .enp-btn-count-formatter {
