--- a/front-end/css/sass/_ghost.scss
+++ b/front-end/css/sass/_ghost.scss
@@ -1,5 +1,3 @@
 .enp-btn-view-ghost {
-    padding-top: 1.3em; // fix for lining up buttons in admin panel
-    
     @extend %ghost_buttons;
 }
