--- a/front-end/css/sass/_plain-buttons.scss
+++ b/front-end/css/sass/_plain-buttons.scss
@@ -1,4 +1,3 @@
 .enp-btn-view-plain-buttons {
-    padding-top: 1.3em; // fix for lining up buttons in admin panel
     @extend %buttons;
 }
