--- a/front-end/css/sass/_plain-text-w-count-bg.scss
+++ b/front-end/css/sass/_plain-text-w-count-bg.scss
@@ -2,7 +2,7 @@
 
     .enp-btn {
         background: none;
-        padding: .15em 0;
+        padding: .25em 0 .3em;
         border-radius: 3px;
         border: none;
     }
@@ -67,13 +67,11 @@
         @extend %btn;
         font-size: 0.7em;
         top: -0.15em;
-        padding: .65em .8em;
-        overflow: visible; // needed to display btn__count click animation due to inline block fix for safari on _base.scss .enp-btn__count
     }
 
     .enp-btn__name {
         color: $btn;
-        padding: .2em 0;
+        padding: .5em 0;
     }
 
     .enp-btn__count:after {
@@ -93,14 +91,14 @@
             &.enp-btn--user-clicked:before,
             &.enp-btn--user-clicked.enp-btn--click-wait:before {
                 width: .975em;
-                top: .4em;
+                top: .45em;
                 left: 0;
             }
 
             &.enp-btn--user-has-not-clicked:before,
             &.enp-btn--user-has-not-clicked.enp-btn--click-wait:before {
                 width: 1.05em;
-                top: 0.35em;
+                top: 0.39em;
                 left: 0;
             }
 
